# grabcut_annotation_tool

./: CMakeLists.txt  README.md  main.cpp  main_vis.cpp  vot.hpp
src/: grabcut_app.cpp  grabcut_app.h
